{{$NEXT}}

2.000     2019-10-18 18:26:15 EDT
  - Reworked the from_object constructor for Time::FFI::tm to always create a
    tm record based on the localtime attributes of the passed object. For the
    previous absolute time behavior, retrieve an epoch timestamp from the
    original object and pass it to localtime or gmtime to create a
    Time::FFI::tm record.
  - Renamed Time::FFI::tm attributes to remove superfluous tm_. Aliases with
    the tm_ prefix remain.
  - Allow Time::FFI::tm conversion to or from Time::tm and Time::FFI::tm.
  - Preserve class from invocant in Time::FFI::tm normalized method.

1.004     2019-10-10 18:27:29 EDT
  - Default tm_mday to 0 in strptime for consistency with other fields on
    Solaris.

1.003     2019-10-10 17:33:23 EDT
  - Clarify that mktime may adjust any elements of the passed tm record.
  - Renamed with_extra method for Time::FFI::tm to normalized and clarify that
    it also normalizes out-of-range values when interpreting as local time.
  - Allow epoch and to_object methods for Time::FFI::tm to normalize
    out-of-range values when interpreting as local time.

1.002     2019-10-10 16:17:27 EDT
  - Added timelocal and timegm functions where available.

1.001     2019-10-10 13:58:11 EDT
  - Added from_object constructor for Time::FFI::tm.

1.000     2019-10-10 12:19:57 EDT
  - Fixed bugs in Time::FFI::tm->to_object where the tm object may be mutated
    and the results may be incorrect when interpreted in the local time zone.
  - Documented that the tm_mday and tm_isdst members of a new Time::FFI::tm
    record should be set explicitly.
  - Documented that mktime adjusts the tm_isdst, tm_wday, tm_yday, and possibly
    tm_gmtoff and tm_zone members of the passed tm record.
  - Initialize tm_mday to 1 and tm_isdst to -1 in the tm record returned by
    strptime, rather than the defaults of 0.
  - Added epoch method to Time::FFI::tm to return the associated Unix epoch
    timestamp.